# karttojen_generointi

./: README.md  pyproject.toml
.github/workflows/: main.yml
dokumentaatio/: määrittelydokumentti  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: bowyer_watson.py  bowyerwatson.py  generaattori.py  perlin.py  voronoi_diagrammi.py
src/tests/: bowyerwatson_test.py  generaattori_test.py  perlin_test.py  voronoi_test.py  watson_test.py
