[tool.poetry]
name = "karttojen-generointi"
version = "0.1.0"
description = ""
authors = ["Kassudin <kasper.kinnarinen@live.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
